little modify in CSS(service.css)

--- a/service.css
+++ b/service.css
@@ -336,6 +336,12 @@ h1 {
     font-size: 12px;
   }
 
+  /* .secondsection{
+    height: 41px;
+    width: 1px;
+    background-color: white;
+    margin: 109px 11px;
+  } */
   .secondsection .vertical {
     height: 41px;
     width: 1px;
